--- a/terminos.html
+++ b/terminos.html
@@ -81,6 +81,16 @@
       <li><strong>Privacidad:</strong> No se publicará información personal de oferentes ni artistas sin su consentimiento explícito.</li>
     </ul>
 
+    
+    <h3>Recomendaciones para evitar estafas</h3>
+    <ul>
+      <li>🌐 Asegúrate de ingresar únicamente desde el sitio oficial: <strong>https://trazosquesalvan.github.io/trazosquesalvan</strong></li>
+      <li>💳 Ningún pago se solicitará por medios no verificados ni a través de enlaces externos.</li>
+      <li>📬 La comunicación oficial se realizará únicamente desde los correos o números publicados en la plataforma.</li>
+      <li>❗ Desconfía de mensajes privados solicitando dinero o datos bancarios a nombre del proyecto.</li>
+      <li>📞 Ante cualquier duda, contacta directamente con el equipo organizador antes de hacer una transacción.</li>
+    </ul>
+
     <p>Gracias por cuidar la vida con tu trazo.</p>
   </main>
 </body>
