--- a/galeria.html
+++ b/galeria.html
@@ -107,13 +107,12 @@
       <a href="iniciativa.html">La Iniciativa</a>
       <a href="participa.html">Participa</a>
       <a href="galeria.html">Galería</a>
-      <a href="subasta.html">¿A dónde va tu trazo?</a>
-      <a href="testimonios.html">Vidas que florecen</a>
-      <a href="terminos.html">Términos y condiciones</a>
+      <a href="subasta.html">Subasta</a>
     </nav>
   </header>
 
   <main>
+    <h2 style="font-size: 2rem; color: #a05a3c; margin-bottom: 1.5rem;">Galería</h2>
     <p>Explora una selección de obras donadas por artistas solidarios: ilustraciones, cerámicas, arte digital impreso y más. Cada pieza representa un gesto de amor hacia los animales.</p>
     <div class="gallery">
 
