--- a/iniciativa.html
+++ b/iniciativa.html
@@ -60,14 +60,13 @@
       <a href="index.html">Inicio</a>
       <a href="iniciativa.html">La Iniciativa</a>
       <a href="participa.html">Participa</a>
-      <a href="galeria.html">Galería</a>
-      <a href="subasta.html">¿A dónde va tu trazo?</a>
-      <a href="testimonios.html">Vidas que florecen</a>
-      <a href="terminos.html">Términos y condiciones</a>
+      <a href="#">Galería</a>
+      <a href="#">Subasta</a>
     </nav>
   </header>
 
   <main>
+    <h2 style="font-size: 2rem; color: #a05a3c; margin-bottom: 1.5rem;">La Iniciativa</h2>
     <p><strong>Trazos que Salvan</strong> es una iniciativa que une sensibilidad artística y compasión por la vida no humana.</p>
 
     <p>Invitamos a artistas, ilustradores, fotógrafos y creadores visuales a ser parte de esta propuesta que busca transformar el arte en una herramienta de cuidado, acción y cambio. Cada obra es un acto simbólico de afecto y solidaridad.</p>
