--- a/participa.html
+++ b/participa.html
@@ -66,13 +66,12 @@
       <a href="iniciativa.html">La Iniciativa</a>
       <a href="participa.html">Participa</a>
       <a href="galeria.html">Galería</a>
-      <a href="subasta.html">¿A dónde va tu trazo?</a>
-      <a href="testimonios.html">Vidas que florecen</a>
-      <a href="terminos.html">Términos y condiciones</a>
+      <a href="subasta.html">Subasta</a>
     </nav>
   </header>
 
   <main>
+    <h2 style="font-size: 2rem; color: #a05a3c; margin-bottom: 1.5rem;">Participa</h2>
     <p>¿Eres artista, ilustrador(a), fotógrafo(a) o creador(a) visual y deseas unirte a una causa compasiva? Esta es tu oportunidad para donar una obra con sentido y formar parte de <strong>Trazos que Salvan</strong>, una subasta solidaria en favor de los animales. Convocamos a quienes desean expresar, a través del arte, su compromiso con la vida, la libertad, el respeto y la dignidad de los seres sintientes. Las obras seleccionadas serán expuestas públicamente y subastadas; los recursos recaudados se destinarán a alimentación, tratamientos veterinarios, esterilización y procesos de adopción.</p>
 
     <p><strong>Fecha límite de inscripción:</strong> 15 de mayo de 2025</p>
