--- a/testimonios.html
+++ b/testimonios.html
@@ -71,8 +71,8 @@
     }
     .card-content p {
       margin: 0.4rem 0;
-      font-size: 1.05rem;
-      line-height: 1.6;
+      font-size: 1.15rem;
+      line-height: 1.8; margin-bottom: 1.5rem;
     }
     .card-content .frase {
       font-style: italic;
