--- a/iniciativa.html
+++ b/iniciativa.html
@@ -68,6 +68,7 @@
   </header>
 
   <main>
+    <h2 style="font-size: 2rem; color: #a05a3c; margin-bottom: 1.5rem;">La Iniciativa</h2>
     <p><strong>Trazos que Salvan</strong> es una iniciativa que une sensibilidad artística y compasión por la vida no humana.</p>
 
     <p>Invitamos a artistas, ilustradores, fotógrafos y creadores visuales a ser parte de esta propuesta que busca transformar el arte en una herramienta de cuidado, acción y cambio. Cada obra es un acto simbólico de afecto y solidaridad.</p>
