--- a/galeria.html
+++ b/galeria.html
@@ -114,6 +114,7 @@
   </header>
 
   <main>
+    <h2 style="font-size: 2rem; color: #a05a3c; margin-bottom: 1.5rem;">Galería</h2>
     <p>Explora una selección de obras donadas por artistas solidarios: ilustraciones, cerámicas, arte digital impreso y más. Cada pieza representa un gesto de amor hacia los animales.</p>
     <div class="gallery">
 
