--- a/iniciativa.html
+++ b/iniciativa.html
@@ -67,7 +67,7 @@
     </nav>
   </header>
 
-  <main>
+  <main style="max-width: 900px; margin: 3rem auto; padding: 0 1.5rem;">
     <h2 style="font-size: 2rem; color: #a05a3c; margin-bottom: 1.5rem;">La Iniciativa</h2>
     <p><strong>Trazos que Salvan</strong> es una iniciativa que une sensibilidad artística y compasión por la vida no humana.</p>
 
