--- a/subasta.html
+++ b/subasta.html
@@ -101,26 +101,26 @@
 
     <div class="destino">
       <h3>¿A dónde van los recursos?</h3>
-      <ul>
-        <li>🍽️ Alimentación para animales rescatados</li>
-        <li>💉 Esterilización y tratamientos veterinarios</li>
-        <li>💊 Medicamentos y cuidados médicos</li>
-        <li>🚗 Traslados a hogares de paso y adopción</li>
-        <li>🏡 Sostenimiento de hogares temporales</li>
+      <ul style="font-size: 1.15rem; line-height: 1.8; margin-bottom: 1.5rem;">
+        <li style="margin-bottom: 0.5rem;">🍽️ Alimentación para animales rescatados</li>
+        <li style="margin-bottom: 0.5rem;">💉 Esterilización y tratamientos veterinarios</li>
+        <li style="margin-bottom: 0.5rem;">💊 Medicamentos y cuidados médicos</li>
+        <li style="margin-bottom: 0.5rem;">🚗 Traslados a hogares de paso y adopción</li>
+        <li style="margin-bottom: 0.5rem;">🏡 Sostenimiento de hogares temporales</li>
       </ul>
     </div>
 
-    <div class="reglas">
-      <h3>Reglamento de participación</h3>
-      <ul>
-        <li>Cada obra tiene un <strong>valor base sugerido</strong> por el artista</li>
-        <li>Puedes hacer una oferta directamente desde la galería, en el formulario individual de cada obra</li>
-        <li>La oferta más alta al 17 de junio será seleccionada</li>
-        <li>El equipo organizador se comunicará con el ofertante para concretar el pago y entrega</li>
-        <li>Los resultados se publicarán el 18 de junio</li>
-        <li>La entrega de obras iniciará a partir del 20 de junio de 2025</li>
-      </ul>
-    </div>
+    
+<div class="timeline">
+  <h3>Reglamento de participación</h3>
+  <p>📌 Cada obra tiene un <strong>valor base sugerido</strong> por el artista</p>
+  <p>📝 Puedes hacer una oferta directamente desde la galería, en el formulario individual de cada obra</p>
+  <p>🏆 La oferta más alta al 17 de junio será seleccionada</p>
+  <p>📬 El equipo organizador se comunicará con el ofertante para concretar el pago y entrega</p>
+  <p>📣 Los resultados se publicarán el 18 de junio</p>
+  <p>📦 La entrega de obras iniciará a partir del 20 de junio de 2025</p>
+</div>
+
 
     <p>Gracias por creer en el arte como lenguaje de transformación. Gracias por convertir tu trazo en esperanza.</p>
   </main>
