--- a/terminos.html
+++ b/terminos.html
@@ -69,29 +69,31 @@
 
   <main>
     <h2>Términos y condiciones</h2>
-    <p>Gracias por ser parte de esta red solidaria de arte y compasión. A continuación, te compartimos las condiciones bajo las cuales se desarrollan las subastas, entregas y participación en “Trazos que Salvan”.</p>
+    <p style="font-size: 1.15rem; line-height: 1.8; margin-bottom: 1.5rem;">Gracias por ser parte de esta red solidaria de arte y compasión. A continuación, te compartimos las condiciones bajo las cuales se desarrollan las subastas, entregas y participación en “Trazos que Salvan”.</p>
 
-    <ul>
-      <li><strong>Participación:</strong> Las obras ofertadas han sido donadas por artistas que han aceptado formar parte de la iniciativa de manera voluntaria.</li>
-      <li><strong>Ofertas:</strong> Cada obra cuenta con un formulario individual para recibir ofertas. Estas deben superar el valor base propuesto por el artista.</li>
-      <li><strong>Adjudicación:</strong> La obra se adjudica a quien haya realizado la mayor oferta válida hasta la fecha de cierre de la subasta.</li>
-      <li><strong>Confirmación:</strong> El equipo organizador se pondrá en contacto con el oferente seleccionado para confirmar la compra y coordinar el proceso de pago y entrega.</li>
-      <li><strong>Destino de fondos:</strong> El 100% del valor recaudado se destina a acciones de protección animal, tales como alimentación, medicamentos, esterilizaciones y traslados.</li>
-      <li><strong>Transparencia:</strong> Los detalles de cada entrega serán publicados en la sección “Vidas que florecen”.</li>
-      <li><strong>Privacidad:</strong> No se publicará información personal de oferentes ni artistas sin su consentimiento explícito.</li>
+    <ul style="font-size: 1.15rem; line-height: 1.8; margin-bottom: 1.5rem;">
+      <li style="margin-bottom: 0.5rem;"><strong>Participación:</strong> Las obras ofertadas han sido donadas por artistas que han aceptado formar parte de la iniciativa de manera voluntaria.</li>
+      <li style="margin-bottom: 0.5rem;"><strong>Ofertas:</strong> Cada obra cuenta con un formulario individual para recibir ofertas. Estas deben superar el valor base propuesto por el artista.</li>
+      <li style="margin-bottom: 0.5rem;"><strong>Adjudicación:</strong> La obra se adjudica a quien haya realizado la mayor oferta válida hasta la fecha de cierre de la subasta.</li>
+      <li style="margin-bottom: 0.5rem;"><strong>Confirmación:</strong> El equipo organizador se pondrá en contacto con el oferente seleccionado para confirmar la compra y coordinar el proceso de pago y entrega.</li>
+      <li style="margin-bottom: 0.5rem;"><strong>Destino de fondos:</strong> El 100% del valor recaudado se destina a acciones de protección animal, tales como alimentación, medicamentos, esterilizaciones y traslados.</li>
+      <li style="margin-bottom: 0.5rem;"><strong>Transparencia:</strong> Los detalles de cada entrega serán publicados en la sección “Vidas que florecen”.</li>
+      <li style="margin-bottom: 0.5rem;"><strong>Privacidad:</strong> No se publicará información personal de oferentes ni artistas sin su consentimiento explícito.</li>
     </ul>
 
     
-    <h3>Recomendaciones para evitar estafas</h3>
-    <ul>
-      <li>🌐 Asegúrate de ingresar únicamente desde el sitio oficial: <strong>https://trazosquesalvan.github.io/trazosquesalvan</strong></li>
-      <li>💳 Ningún pago se solicitará por medios no verificados ni a través de enlaces externos.</li>
-      <li>📬 La comunicación oficial se realizará únicamente desde los correos o números publicados en la plataforma.</li>
-      <li>❗ Desconfía de mensajes privados solicitando dinero o datos bancarios a nombre del proyecto.</li>
-      <li>📞 Ante cualquier duda, contacta directamente con el equipo organizador antes de hacer una transacción.</li>
-    </ul>
+    
+<div class="timeline">
+  <h3>Recomendaciones para evitar estafas</h3>
+  <p style="font-size: 1.15rem; line-height: 1.8; margin-bottom: 1.5rem;">🌐 Asegúrate de ingresar únicamente desde el sitio oficial: <strong>https://trazosquesalvan.github.io/trazosquesalvan</strong></p>
+  <p style="font-size: 1.15rem; line-height: 1.8; margin-bottom: 1.5rem;">💳 Ningún pago se solicitará por medios no verificados ni a través de enlaces externos.</p>
+  <p style="font-size: 1.15rem; line-height: 1.8; margin-bottom: 1.5rem;">📬 La comunicación oficial se realizará únicamente desde los correos o números publicados en la plataforma.</p>
+  <p style="font-size: 1.15rem; line-height: 1.8; margin-bottom: 1.5rem;">❗ Desconfía de mensajes privados solicitando dinero o datos bancarios a nombre del proyecto.</p>
+  <p style="font-size: 1.15rem; line-height: 1.8; margin-bottom: 1.5rem;">📞 Ante cualquier duda, contacta directamente con el equipo organizador antes de hacer una transacción.</p>
+</div>
 
-    <p>Gracias por cuidar la vida con tu trazo.</p>
+
+    <p style="font-size: 1.15rem; line-height: 1.8; margin-bottom: 1.5rem;">Gracias por cuidar la vida con tu trazo.</p>
   </main>
 </body>
 </html>
