--- a/terminos.html
+++ b/terminos.html
@@ -7,6 +7,13 @@
   <title>Términos y condiciones - Trazos que Salvan</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
   <style>
+    .timeline {
+      background-color: #f6eee9;
+      padding: 1rem 1.5rem;
+      border-left: 5px solid #dea193;
+      margin: 1rem 0 2rem;
+    }
+
     body {
       font-family: 'Playfair Display', serif;
       background-color: #fdf9f6;
