--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       margin: 0;
       font-family: 'Playfair Display', serif;
       background-color: #fdf9f6;
-      color: #5e3d2e;
+      color: #D7957D;
     }
     header {
       display: flex;
