--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       font-size: 1.3rem;
       letter-spacing: 0.25em;
       text-transform: uppercase;
-      color: #DEA193;
+      color: #D7957D;
     }
     nav a {
       margin-left: 2rem;
