--- a/iniciativa.html
+++ b/iniciativa.html
@@ -11,7 +11,7 @@
       margin: 0;
       font-family: 'Playfair Display', serif;
       background-color: #fdf9f6;
-      color: #c57b57;
+      color: #D7957D;
     }
     header {
       display: flex;
@@ -23,7 +23,7 @@
       font-size: 1.3rem;
       letter-spacing: 0.25em;
       text-transform: uppercase;
-      color: #DEA193;
+      color: #D7957D;
     }
     nav a {
       margin-left: 2rem;
