--- a/participa.html
+++ b/participa.html
@@ -12,7 +12,7 @@
       margin: 0;
       font-family: 'Playfair Display', serif;
       background-color: #fdf9f6;
-      color: #5e3d2e;
+      color: #D7957D;
     }
     header {
       display: flex;
@@ -24,7 +24,7 @@
       font-size: 1.3rem;
       letter-spacing: 0.25em;
       text-transform: uppercase;
-      color: #DEA193;
+      color: #D7957D;
     }
     nav a {
       margin-left: 2rem;
