--- a/participa.html
+++ b/participa.html
@@ -24,7 +24,7 @@
       font-size: 1.3rem;
       letter-spacing: 0.25em;
       text-transform: uppercase;
-      color: #D7957D;
+      color: #DEA193;
     }
     nav a {
       margin-left: 2rem;
