--- a/galeria.html
+++ b/galeria.html
@@ -12,7 +12,7 @@
       margin: 0;
       font-family: 'Playfair Display', serif;
       background-color: #fdf9f6;
-      color: #5e3d2e;
+      color: #DEA193;
     }
     header {
       display: flex;
